Name:                klacz2
Version:             0.0
Description:         next generation of klacz IRC bot
License:             GPL-3
Author:              adam@michalik.es
Maintainer:          ada@michalik.es
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable IRCFrontend
  Main-is:           IRCFrontend.hs
  Build-Depends:     base, containers, bytestring,
                     network, irc, stm, transformers,
                     zeromq4-haskell

Executable SubscriberTest
  Main-is:           SubscriberTest.hs
  Build-Depends:     zeromq4-haskell, transformers

